tests/errors/error_args_simple.wyn
fn add(a, b) {
    return a + b;
}

fn main() {
    var result = add(5);
    print(result);
}